# Tyche

./: .gitignore  README.md
QCTyche/: CMakeLists.txt  main.cpp
QCTyche-VS/: QCTyche-VS.sln
QCTyche-VS/QCTyche-VS/: CameraListener.cpp  CameraListener.h  FileHandler.cpp  FileHandler.h  Logger.cpp  Logger.h  QCTyche-VS.cpp  QCTyche-VS.vcxproj  QCTyche-VS.vcxproj.filters  Status.cpp  Status.h  SystemHandler.h  cvui.h  ui.cpp  ui.h
QCTyche/cvui/: cvui.h
QCTyche/include/: CameraListener.h
QCTyche/src/: CameraListener.cpp
install/: License  QCTyche-CVUI.iss
install/Installer/: README.md
